--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">FragmentBackStack</string>
+    <string name="app_name">Fragment回退栈简单实现</string>
 </resources>
